--- a/day17.html
+++ b/day17.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+JavaScript 從零開始 - Day17 - 控制判斷 (比較運算子、邏輯運算子) - iT 邦幫忙::一起幫忙解決難題，拯救 IT 人的一天
+https://ithelp.ithome.com.tw/articles/10235774
+ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
