--- a/day+15.html
+++ b/day+15.html
@@ -33,7 +33,8 @@ link.addEventListener('click', function (e) {
 var link = document.querySelector('#link');
 // 在 evend handler 加上 e.preventDefault();
 link.addEventListener('click', function (e) {
-  e.preventDefault();
+//   e.preventDefault();
+//   event.returnValue = false;
   console.log('Google!');
 }, false);
     </script>
@@ -54,7 +55,7 @@ lbl.addEventListener('click', function (e) {
 
     <br>
     <label class="lbl1">
-        Label1 <input type="checkbox" name="chkbox" id="chkbox1">
+        Label2 <input type="checkbox" name="chkbox" id="chkbox1">
     </label>
     <script>
 // label
@@ -73,13 +74,13 @@ chkbox.addEventListener('click', function (e) {
 }, false);
 
 lbl.addEventListener('click', function (e) {
-    console.log(this.tagName);      // "label"
+    // console.log(this.tagName);      // "label" LABEL
 }, false);
     </script>
 
     <br>
     <label class="lbl2">
-        Label2 <input type="checkbox" name="chkbox" id="chkbox2">
+        Label3 <input type="checkbox" name="chkbox" id="chkbox2">
     </label>
 <script>
 // label
